Implemented unit tests for CustomerFavoritesService and Updated VinylRecordStockServiceTest with verify